--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser = chrome
+browser=chrome
 dice.url=https://www.dice.com
 etsy.url=https://www.etsy.com/
 cargurus.url =https://www.cargurus.com
@@ -9,3 +9,10 @@ percentage=https://percentagecalculator.net
 calc.url = https://www.calculator.net/
 cloudtables.url = https://editor.datatables.net/
 vytrack.url  = https://qa2.vytrack.com/user/login
+mockaroo.url = https://www.mockaroo.com
+spartan.url=http://54.158.153.204:8000
+dbUrl=jdbc:oracle:thin:@54.158.153.204:1521:xe
+dbUsername=SP
+dbPassword=SP
+
+facebook.url = https://www.facebook.com
