Cucumber-junit file

--- a/configuration.properties
+++ b/configuration.properties
@@ -7,12 +7,16 @@ lyft.fare.estimate.url=https://www.lyft.com/rider/fare-estimate
 google.url = https://www.google.com/
 percentage=https://percentagecalculator.net
 calc.url = https://www.calculator.net/
-cloudtables.url = https://editor.datatables.net/
+edit.url = https://editor.datatables.net/
 vytrack.url  = https://qa2.vytrack.com/user/login
 mockaroo.url = https://www.mockaroo.com
 spartan.url=http://54.158.153.204:8000
 dbUrl=jdbc:oracle:thin:@54.158.153.204:1521:xe
 dbUsername=SP
 dbPassword=SP
+username =joyanisar@gmail.com
+password =afghan30
 
 facebook.url = https://www.facebook.com
+
+amazon.url = https://www.amazon.com/
